--- a/frontend/src/components/SignUpModal/SignupForm.css
+++ b/frontend/src/components/SignUpModal/SignupForm.css
@@ -18,7 +18,7 @@
 }
 
 .matchname-message {
-    margin-top: 10px;
+    margin-top: 18px;
     margin-bottom: 25px;
     display: flex;
     color: rgb(113, 113, 113);
@@ -28,7 +28,7 @@
 }
 
 .birthdate-message {
-    margin-top: 10px;
+    margin-top: 18px;
     margin-bottom: 25px;
     display: flex;
     color: rgb(113, 113, 113);
@@ -38,7 +38,7 @@
 }
 
 .email-message {
-    margin-top: 10px;
+    margin-top: 18px;
     margin-bottom: 25px;
     display: flex;
     color: rgb(113, 113, 113);
@@ -215,7 +215,7 @@ input:not(:focus):valid ~ .ln-floating-label{
 
 input:focus ~ .bd-floating-label,
 input:not(:focus):valid ~ .bd-floating-label{
-  top: 256px;
+  top: 266px;
   bottom: 10px;
   left: 37px;
   font-size: 11px;
@@ -225,7 +225,7 @@ input:not(:focus):valid ~ .bd-floating-label{
   position: absolute;
   pointer-events: none;
   left: 37px;
-  top: 266px;
+  top: 276px;
   color: #717171;
   transition: 0.2s ease all;
   font-size: 18px;
@@ -234,7 +234,7 @@ input:not(:focus):valid ~ .bd-floating-label{
 
 input:focus ~ .signupemail-floating-label,
 input:not(:focus):valid ~ .signupemail-floating-label{
-  top: 373px;
+  top: 388px;
   bottom: 10px;
   left: 37px;
   font-size: 11px;
@@ -244,7 +244,7 @@ input:not(:focus):valid ~ .signupemail-floating-label{
   position: absolute;
   pointer-events: none;
   left: 37px;
-  top: 383px;
+  top: 398px;
   color: #717171;
   transition: 0.2s ease all;
   font-size: 18px;
@@ -253,7 +253,7 @@ input:not(:focus):valid ~ .signupemail-floating-label{
 
 input:focus ~ .su-password-floating-label,
 input:not(:focus):valid ~ .su-password-floating-label{
-  top: 471px;
+  top: 495px;
   bottom: 10px;
   left: 37px;
   font-size: 11px;
@@ -263,7 +263,7 @@ input:not(:focus):valid ~ .su-password-floating-label{
   position: absolute;
   pointer-events: none;
   left: 37px;
-  top: 481px;
+  top: 505px;
   color: #717171;
   transition: 0.2s ease all;
   font-size: 18px;
